Fix button text alignment on mobile

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -691,13 +691,13 @@ video {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-transparent {
-  background-color: transparent;
 }
 
 .px-2 {
@@ -754,12 +754,20 @@ video {
   font-size: 0.75rem;
 }
 
+.leading-\[2rem\] {
+  line-height: 2rem;
+}
+
 .leading-\[4rem\] {
   line-height: 4rem;
 }
 
 .leading-none {
   line-height: 1;
+}
+
+.leading-\[3rem\] {
+  line-height: 3rem;
 }
 
 .tracking-tight {
@@ -912,6 +920,10 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
   }
+
+  .md\:leading-\[4rem\] {
+    line-height: 4rem;
+  }
 }
 
 .dark\:bg-black:where(.dark, .dark *) {
@@ -924,9 +936,9 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.dark\:text-white:where(.dark, .dark *) {
+.dark\:text-gray-200:where(.dark, .dark *) {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .dark\:text-gray-400:where(.dark, .dark *) {
@@ -939,7 +951,7 @@ video {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
-.dark\:text-gray-200:where(.dark, .dark *) {
+.dark\:text-white:where(.dark, .dark *) {
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
